Factor S3 media uploads out to new provider system.
This introduces a new "provider" system which allows core pieces of
code to be swapped out for different hosting setups.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -392,24 +392,23 @@ words_file = /usr/dict/words
 # -- media stuff --
 # user agent for the scraper
 useragent = Mozilla/5.0 (compatible; redditbot/1.0; +http://www.reddit.com/feedback)
+# Embedly API Key
+embedly_api_key =
 
-# The storage method to use for media
-# Options:
-#      s3 - Uses Amazon S3 to upload media to buckets
-media_store = s3
+# which backend provider to use for media (thumbnails, subreddit stylesheets,
+# subreddit images, app icons). options are:
+#  s3 - use amazon s3
+#  or write your own!
+media_provider = s3
 
+# s3 provider
 # your s3 credentials -- if these are left blank, we'll pass None to
 # boto which will trigger it to look in various places, including instance
 # metadata if on ec2, for credentials.
-S3KEY_ID = 
-S3SECRET_KEY = 
-
-# This bucket is used for old media, new installs may leave this blank
-s3_old_thumb_bucket = 
-
+S3KEY_ID =
+S3SECRET_KEY =
 # May be one bucket, or many buckets seperated by commas
-s3_media_buckets = 
-
+s3_media_buckets =
 # Store direct urls for images, rather than buckets
 # For the bucket mybucket with the image helloworld.jpg the stored url would be:
 #   true:  http://s3.amazonaws.com/mybucket/helloworld.jpg
@@ -417,8 +416,6 @@ s3_media_buckets =
 s3_media_direct = true
 
 media_domain = localhost
-# Embedly API Key
-embedly_api_key =
 
 # -- prices --
 gold_month_price = 3.99
