Media Provider: Add "filesystem" provider for local nginx.
This media provider is for simple single-server installations where an
HTTP server running on the same machine handles serving of the static
media files.

An appropriate setup with nginx is now the default in the new install
script.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -398,6 +398,7 @@ embedly_api_key =
 # which backend provider to use for media (thumbnails, subreddit stylesheets,
 # subreddit images, app icons). options are:
 #  s3 - use amazon s3
+#  filesystem - write to local filesystem
 #  or write your own!
 media_provider = s3
 
@@ -414,6 +415,11 @@ s3_media_buckets =
 #   true:  http://s3.amazonaws.com/mybucket/helloworld.jpg
 #   false: http://mybucket/helloworld.jpg
 s3_media_direct = true
+
+# filesystem provider configuration
+media_fs_root =
+media_fs_base_url_http =
+media_fs_base_url_https =
 
 media_domain = localhost
 
