Stripe gold subscriptions.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -68,6 +68,8 @@ PAYPAL_BUTTONID_CREDDITS_BYYEAR   =
 STRIPE_WEBHOOK_SECRET =
 STRIPE_PUBLIC_KEY =
 STRIPE_SECRET_KEY =
+STRIPE_MONTHLY_GOLD_PLAN =
+STRIPE_YEARLY_GOLD_PLAN =
 
 COINBASE_WEBHOOK_SECRET =
 COINBASE_BUTTONID_ONETIME_1MO =
