Replace goldvertisement with daily progress bar.
Many thanks to @chromakode for design and copy.

The old goldvertisement live config is left in for now so that old code
continues to function during rollout.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -608,6 +608,8 @@ frontend_logging = true
 # use **strong** markup for a larger font, and "  \n" (<br>) to separate lines.
 goldvertisement_blurbs = "Make reddit better. Try %(reddit_gold)." "This year, give the gift of %(reddit_gold)s.|(and you should probably also give some other, better gifts)"
 goldvertisement_has_gold_blurbs = "**&ldquo;Exquisite!&rdquo;**  \nGrab a drink and join us in [the lounge](/r/lounge)."
+# daily gold revenue goal (in pennies) for progress bar thing
+gold_revenue_goal = 0
 # sample multireddits (displayed when a user has no multis)
 listing_chooser_sample_multis = /user/reddit/m/hello, /user/reddit/m/world
 # multi of subreddits to share with gold users
