--- a/r2/example.ini
+++ b/r2/example.ini
@@ -607,6 +607,8 @@ listing_chooser_sample_multis = /user/reddit/m/hello, /user/reddit/m/world
 # multi of subreddits to share with gold users
 listing_chooser_gold_multi = /user/reddit/m/gold
 # subreddit showcasing new multireddits
-listing_chooser_explore_sr = 
+listing_chooser_explore_sr =
+# subreddits that help people discover more subreddits (used in explore tab)
+discovery_srs =
 # historical cost to run a reddit server
 pennies_per_server_second = 1970/1/1:1
