--- a/r2/example.ini
+++ b/r2/example.ini
@@ -15,6 +15,8 @@ SECRET = YWJjZGVmZ2hpamtsbW5vcHFyc3R1dnd4eXowMTIzNDU2Nzg5
 FEEDSECRET = YWJjZGVmZ2hpamtsbW5vcHFyc3R1dnd4eXowMTIzNDU2Nzg5
 # used for authenticating admin API calls w/o cookie
 ADMINSECRET = YWJjZGVmZ2hpamtsbW5vcHFyc3R1dnd4eXowMTIzNDU2Nzg5
+# used to securely authenticate websocket requests to sutro
+websocket = YWJjZGVmZ2hpamtsbW5vcHFyc3R1dnd4eXowMTIzNDU2Nzg5
 
 
 #
@@ -419,6 +421,9 @@ media_fs_base_url_http =
 media_fs_base_url_https =
 
 media_domain = localhost
+
+# the hostname to connect to for websockets
+websocket_host =
 
 # -- prices --
 gold_month_price = 3.99
