toolbar: Fix embed for offsite subdomains like blog.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -37,6 +37,8 @@ shortdomain =
 domain_prefix =
 # subdomains that don't need special processing
 reserved_subdomains = www, ssl
+# subdomains that are not reddit instances
+offsite_subdomains =
 # https api endpoint (must be g.domain or a subdomain of g.domain)
 https_endpoint =
 # (secure) payment domain for self-serve ads
