SRMember: Start dual-writing to a dedicated cache pool.
This is one of the most heavily hit rels currently and the hope is that
pulling it out to its own pool will make the main cache more effective
for everything else.  It may make sense to move SRMember to a different
model such as a C* DenormalizedRelation in the future.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -289,6 +289,8 @@ rendercaches = 127.0.0.1:11211
 pagecaches = 127.0.0.1:11211
 # hosts that cache permacache cassandra data
 permacache_memcaches = 127.0.0.1:11211
+# hosts that cache srmember rels (subset of Thing data)
+srmembercaches = 127.0.0.1:11211
 # a local cache that's not globally consistent and can have stale data (optional)
 stalecaches =
 
