Move ip_hash to secret vault and rename it to "true_ip".

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -17,6 +17,8 @@ FEEDSECRET = YWJjZGVmZ2hpamtsbW5vcHFyc3R1dnd4eXowMTIzNDU2Nzg5
 ADMINSECRET = YWJjZGVmZ2hpamtsbW5vcHFyc3R1dnd4eXowMTIzNDU2Nzg5
 # used to securely authenticate websocket requests to sutro
 websocket = YWJjZGVmZ2hpamtsbW5vcHFyc3R1dnd4eXowMTIzNDU2Nzg5
+# secret for validating HTTP_TRUE_CLIENT_IP_HASH as sent by the CDN
+true_ip =
 
 [DEFAULT]
 ############################################ SITE-SPECIFIC OPTIONS
@@ -84,8 +86,6 @@ subreddit_stylesheets_static = false
 # if your webserver is a proxy and on a different instance on the same 10.0.0.0/8 network or host
 # set X-forwarded-for and set this to true
 trust_local_proxies = false
-# hash for validating HTTP_TRUE_CLIENT_IP_HASH as sent by the CDN
-ip_hash =
 # Location (directory) for temp files for diff3 merging
 # Empty will use python default for temp files
 diff3_temp_location =
