Add formal ratelimiting headers
Three headers can now be included for API requests:

X-Ratelimit-Used: Number of requests used in this period
X-Ratelimit-Remaining: Number of requests left to use
X-Ratelimit-Reset: Approximate number of seconds to end of period

Additionally, 429 responses can be returned for requests that
exceed the ratelimit.

Ratelimits are per-IP normally. OAuth clients will be
limited per user-client combo.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -204,12 +204,7 @@ embedly_api_key =
 
 
 ############################################ QUOTAS
-# rate limiter duration (minutes)
-RATELIMIT = 10
-# user agent substrings to hard-ratelimit to a number of requests per ten second period
-# example: agents = googlebot:10, appengine:2
-agents =
-# ratelimits for various types of relations creatable in subreddits
+# quota for various types of relations creatable in subreddits
 sr_banned_quota = 10000
 sr_moderator_invite_quota = 10000
 sr_contributor_quota = 10000
@@ -223,14 +218,39 @@ new_link_share_delay = 30 seconds
 max_sr_images = 50
 
 
+############################################ RATELIMITS
+
+# If true, send 429 responses on exceeded ratelimits
+# If false, send headers only, but don't abort
+# Only applies if tracking is enabled below
+ENFORCE_RATELIMIT = false
+
+# If true, store per-user request counts in ratelimits cache
+RL_SITEWIDE_ENABLED = true
+# How large of a burst window will users be allowed?
+RL_RESET_MINUTES = 10
+# What is the average request rate over the above time period?
+RL_AVG_REQ_PER_SEC = 0.5
+
+# Same as above, but configured separately for connections via OAuth
+RL_OAUTH_SITEWIDE_ENABLED = true
+RL_OAUTH_RESET_MINUTES = 10
+RL_OAUTH_AVG_REQ_PER_SEC = 0.5
+
+# user agent substrings to hard-ratelimit to a number of requests per ten second period
+# example: agents = googlebot:10, appengine:2
+agents =
+
+# karma needed to avoid per-subreddit submission ratelimits
+MIN_RATE_LIMIT_KARMA = 10
+MIN_RATE_LIMIT_COMMENT_KARMA = 1
+
+
 ############################################ THRESHOLDS
 # minimum item score to be considered for quota baskets
 QUOTA_THRESHOLD = 5
 # if the user has positive total karma, their per-subreddit karma will default to this, else 0
 MIN_UP_KARMA = 1
-# karma needed to avoid per-subreddit submission ratelimits
-MIN_RATE_LIMIT_KARMA = 10
-MIN_RATE_LIMIT_COMMENT_KARMA = 1
 # ages in days at which various actions are disallowed to preserve history
 REPLY_AGE_LIMIT = 180
 VOTE_AGE_LIMIT = 180
@@ -295,6 +315,8 @@ permacache_memcaches = 127.0.0.1:11211
 srmembercaches = 127.0.0.1:11211
 # a local cache that's not globally consistent and can have stale data (optional)
 stalecaches =
+# cache for tracking rate limit thresholds
+ratelimitcaches = 127.0.0.1:11211
 
 
 ############################################ MISCELLANEOUS
