--- a/r2/example.ini
+++ b/r2/example.ini
@@ -606,7 +606,7 @@ spotlight_interest_sub_p = .05
 spotlight_interest_nosub_p = .1
 # map of comment tree version to how frequently it should be chosen relative to
 # the others
-comment_tree_version_weights = 1:1, 2:0
+comment_tree_version_weights = 1:1, 2:0, 3:0
 # enables/disables client side logging POSTs to /web/log/...
 frontend_logging = true
 # daily gold revenue goal (in pennies) for progress bar thing
