Display trending subreddits on the front page.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -61,6 +61,8 @@ default_sr = reddit.com
 admin_message_acct = reddit
 # subreddit used for DMCA takedowns
 takedown_sr = _takedowns
+# subreddit used for trending subreddits postings
+trending_sr = trendingsubreddits
 # list of subreddits to auto-subscribe users to
 automatic_reddits =
 # special subreddit that only reddit gold subscribers can use
