install-reddit: Install plugins about, liveupdate, meatspace by default.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -143,6 +143,27 @@ profile_directory =
 timed_templates = Reddit, Link, Comment, LinkListing, NestedListing, SubredditTopBar
 
 
+############################################ PLUGINS
+# which plugins are enabled (they must be installed via setup.py first)
+plugins =
+
+###### about
+# set which subreddits the about page pulls its source data from
+# make sure you create the subreddits as well, otherwise you'll get an error
+about_sr_quotes = about_quotes
+about_sr_images = about_images
+# size limit on the about page slideshow
+about_images_count = 50
+about_images_min_score = 1
+
+###### liveupdate
+# the domain the activity pixel is hosted on
+liveupdate_pixel_domain = %(domain)s
+
+###### meatspace
+# nothing!
+
+
 ############################################ LOGGING
 # whether to print a "reddit app started" message at start
 log_start = true
