Move paypal secret to vault.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -29,6 +29,8 @@ stripe_secret_key =
 # must also set authorizenetapi to enable)
 authorizenetname = 
 authorizenetkey = 
+# secret for communicating with Paypal (optional payment processor)
+paypal_webhook = 
 
 [DEFAULT]
 ############################################ SITE-SPECIFIC OPTIONS
@@ -509,7 +511,6 @@ db_servers_promocampaign = main
 ############################################ GOLD
 gold_month_price = 3.99
 gold_year_price = 29.99
-PAYPAL_SECRET =
 PAYPAL_BUTTONID_ONETIME_BYMONTH   =
 PAYPAL_BUTTONID_ONETIME_BYYEAR    =
 PAYPAL_BUTTONID_AUTORENEW_BYMONTH =
