Move stripe secrets to vault.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -21,6 +21,10 @@ websocket = YWJjZGVmZ2hpamtsbW5vcHFyc3R1dnd4eXowMTIzNDU2Nzg5
 true_ip =
 # secret for authenticating private media embeds
 media_embed = YWJjZGVmZ2hpamtsbW5vcHFyc3R1dnd4eXowMTIzNDU2Nzg5
+# secrets for communicating with Stripe (optional payment processor)
+stripe_webhook = 
+stripe_public_key = 
+stripe_secret_key = 
 
 [DEFAULT]
 ############################################ SITE-SPECIFIC OPTIONS
@@ -508,8 +512,6 @@ PAYPAL_BUTTONID_AUTORENEW_BYMONTH =
 PAYPAL_BUTTONID_AUTORENEW_BYYEAR  =
 PAYPAL_BUTTONID_CREDDITS_BYMONTH  =
 PAYPAL_BUTTONID_CREDDITS_BYYEAR   =
-STRIPE_PUBLIC_KEY =
-STRIPE_SECRET_KEY =
 STRIPE_MONTHLY_GOLD_PLAN =
 STRIPE_YEARLY_GOLD_PLAN =
 COINBASE_WEBHOOK_SECRET =
@@ -528,7 +530,6 @@ COINBASE_BUTTONID_ONETIME_1YR =
 COINBASE_BUTTONID_ONETIME_2YR =
 COINBASE_BUTTONID_ONETIME_3YR =
 RG_SECRET =
-STRIPE_WEBHOOK_SECRET =
 
 
 ############################################ SELF-SERVE ADS
