Move coinbase_webhook to vault.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -31,6 +31,8 @@ authorizenetname =
 authorizenetkey = 
 # secret for communicating with Paypal (optional payment processor)
 paypal_webhook = 
+# secret for communicating with Coinbase (optional payment processor)
+coinbase_webhook = 
 
 [DEFAULT]
 ############################################ SITE-SPECIFIC OPTIONS
@@ -519,7 +521,6 @@ PAYPAL_BUTTONID_CREDDITS_BYMONTH  =
 PAYPAL_BUTTONID_CREDDITS_BYYEAR   =
 STRIPE_MONTHLY_GOLD_PLAN =
 STRIPE_YEARLY_GOLD_PLAN =
-COINBASE_WEBHOOK_SECRET =
 COINBASE_BUTTONID_ONETIME_1MO =
 COINBASE_BUTTONID_ONETIME_2MO =
 COINBASE_BUTTONID_ONETIME_3MO =
