Move redditgifts_webhook to vault.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -33,6 +33,8 @@ authorizenetkey =
 paypal_webhook = 
 # secret for communicating with Coinbase (optional payment processor)
 coinbase_webhook = 
+# secret for communicating with RedditGifts (optional payment processor)
+redditgifts_webhook = 
 
 [DEFAULT]
 ############################################ SITE-SPECIFIC OPTIONS
@@ -535,7 +537,6 @@ COINBASE_BUTTONID_ONETIME_11MO =
 COINBASE_BUTTONID_ONETIME_1YR =
 COINBASE_BUTTONID_ONETIME_2YR =
 COINBASE_BUTTONID_ONETIME_3YR =
-RG_SECRET =
 
 
 ############################################ SELF-SERVE ADS
