Move Authorize.net secrets to vault.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -25,6 +25,10 @@ media_embed = YWJjZGVmZ2hpamtsbW5vcHFyc3R1dnd4eXowMTIzNDU2Nzg5
 stripe_webhook = 
 stripe_public_key = 
 stripe_secret_key = 
+# secrets for communicating with Authorize.net (optional payment processor--
+# must also set authorizenetapi to enable)
+authorizenetname = 
+authorizenetkey = 
 
 [DEFAULT]
 ############################################ SITE-SPECIFIC OPTIONS
@@ -537,11 +541,8 @@ selfserve_support_email = selfservesupport@mydomain.com
 MAX_CAMPAIGNS_PER_LINK = 100
 cpm_selfserve = 1.00
 cpm_selfserve_geotarget = 0.25
-# authorize.net credentials (blank authorizenetapi to disable)
 authorizenetapi =
 # authorizenetapi = https://api.authorize.net/xml/v1/request.api
-authorizenetname =
-authorizenetkey =
 min_promote_bid = 20
 max_promote_bid = 9999
 min_promote_future = 2
