Makefile: fix typo in clean_names.

--- a/r2/Makefile
+++ b/r2/Makefile
@@ -212,7 +212,7 @@ $(MANGLE_BUILDSTAMP): $(MANGLEABLE_FILES)
 	touch $@
 
 clean_names:
-	rm -f $(MANGLE_BUILDSTAMP) $(NAMES_FILES) $(MANGLEABLE_FILES) $(MANGLED_FILES)
+	rm -f $(MANGLE_BUILDSTAMP) $(NAMES_FILE) $(MANGLEABLE_FILES) $(MANGLED_FILES)
 
 #### gzip!
 GZIPPABLE := $(filter %.css %.js,$(MANGLED_FILES))
