--- a/r2/example.ini
+++ b/r2/example.ini
@@ -543,7 +543,8 @@ COINBASE_BUTTONID_ONETIME_3YR =
 selfserve_support_email = selfservesupport@mydomain.com
 MAX_CAMPAIGNS_PER_LINK = 100
 cpm_selfserve = 1.00
-cpm_selfserve_geotarget = 0.25
+cpm_selfserve_geotarget_country = 0.25
+cpm_selfserve_geotarget_metro = 1.00
 authorizenetapi =
 # authorizenetapi = https://api.authorize.net/xml/v1/request.api
 min_promote_bid = 20
