Make private code import config and failures explicit.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -373,6 +373,8 @@ static_path = /static/
 words_file = /usr/dict/words
 # domains that we consider URLs case sensitive for repost detection purposes
 case_sensitive_domains = i.imgur.com, youtube.com
+# whether to load reddit private code (a hack until we structure it better)
+import_private = false
 
 
 ############################################ AUTHENTICATION
