Archiving: support custom age cutoff per-subreddit
This consolidates the three previous globals of REPLY_AGE_LIMIT,
VOTE_AGE_LIMIT, and REPORT_AGE_LIMIT into a single timeinterval setting
of ARCHIVE_AGE, and allows individual subreddits to use an archive_age
attr to override this default cutoff.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -291,10 +291,10 @@ MIN_RATE_LIMIT_COMMENT_KARMA = 1
 QUOTA_THRESHOLD = 5
 # if the user has positive total karma, their per-subreddit karma will default to this, else 0
 MIN_UP_KARMA = 1
-# ages in days at which various actions are disallowed to preserve history
-REPLY_AGE_LIMIT = 180
-VOTE_AGE_LIMIT = 180
-REPORT_AGE_LIMIT = 180
+
+# age at which links/comments become "archived" and can no longer be voted on, replied to, or reported
+ARCHIVE_AGE = 180 days
+
 # minimum age of an account (in days) for the "create a subreddit" button to show
 min_membership_create_community = 30
 # maximum age (in days) of items eligible for display on normalized hot pages (frontpage, multis, etc.)
