Allow certain media types to be expanded by default.
Current need: liveupdate.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -238,6 +238,9 @@ css_killswitch = False
 useragent = Mozilla/5.0 (compatible; redditbot/1.0; +http://www.reddit.com/feedback)
 # Embedly API Key. if no key is provided, the scraper will only fetch thumbnails.
 embedly_api_key =
+# A tuple of what media_object types will automatically be displayed on comments view.
+# Ex: liveupdate, custom
+autoexpand_media_types = liveupdate
 
 
 ############################################ QUOTAS
