Report: don't block reports on archived items

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -292,7 +292,7 @@ QUOTA_THRESHOLD = 5
 # if the user has positive total karma, their per-subreddit karma will default to this, else 0
 MIN_UP_KARMA = 1
 
-# age at which links/comments become "archived" and can no longer be voted on, replied to, or reported
+# age at which links/comments become "archived" and can no longer be voted on or replied to
 ARCHIVE_AGE = 180 days
 
 # minimum age of an account (in days) for the "create a subreddit" button to show
