Move default selfserve budget to ini.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -550,6 +550,7 @@ cpm_selfserve_geotarget_country = 1.25
 cpm_selfserve_geotarget_metro = 2.00
 authorizenetapi =
 # authorizenetapi = https://api.authorize.net/xml/v1/request.api
+default_promote_bid = 50
 min_promote_bid = 20
 max_promote_bid = 9999
 min_promote_future = 2
