Move admin/sponsor/employee permissions to LiveConfig.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -81,12 +81,6 @@ trending_sr =
 automatic_reddits =
 # special subreddit that only reddit gold subscribers can use
 lounge_reddit =
-# list of accounts with admin powers
-admins = reddit
-# accounts with special access to the ad system
-sponsors =
-# employees that aren't admins or sponsors (Free gilding, admin distinguish, traffic viewing, etc.)
-employees =
 
 #### Static Files
 # if set, these are the domains used for static files served over http and https
@@ -628,6 +622,8 @@ format = %(message)s
 # is enabled, then this configuration will be found by the app in zookeeper. to
 # write it to zookeeper, use the writer script: scripts/write_live_config.
 [live_config]
+# privileged accounts
+employees = reddit:admin
 # links that get their own infrastructure (comma-delimited list of id36s)
 fastlane_links =
 # a message placed in the infobar
