Log browser performance data to statsd.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -21,6 +21,8 @@ websocket = YWJjZGVmZ2hpamtsbW5vcHFyc3R1dnd4eXowMTIzNDU2Nzg5
 true_ip =
 # secret for authenticating private media embeds
 media_embed = YWJjZGVmZ2hpamtsbW5vcHFyc3R1dnd4eXowMTIzNDU2Nzg5
+# secret for authenticating controller#action name
+action_name = YWJjZGVmZ2hpamtsbW5vcHFyc3R1dnd4eXowMTIzNDU2Nzg5
 # secrets for communicating with Stripe (optional payment processor)
 stripe_webhook = 
 stripe_public_key = 
