example.ini: Add liveupdate invite quota to example.ini.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -169,6 +169,8 @@ about_images_min_score = 1
 ###### liveupdate
 # the domain the activity pixel is hosted on
 liveupdate_pixel_domain = %(domain)s
+# maximum number of outstanding invites an event can have
+liveupdate_invite_quota = 5
 
 ###### meatspace
 # nothing!
