Add optional controversial indicator to comment scores
Conflicts:

	r2/r2/lib/pages/pages.py

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -655,3 +655,9 @@ listing_chooser_explore_sr =
 discovery_srs =
 # historical cost to run a reddit server
 pennies_per_server_second = 1970/1/1:1
+
+# Controversial item determination
+# Criteria for an item to meet to be determined as controversial
+cflag_min_votes = 7
+cflag_lower_bound = 0.4
+cflag_upper_bound = 0.6
