Make S3 region configurable.
Useful for reddit instances not in the US region.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -203,9 +203,13 @@ S3SECRET_KEY =
 s3_media_buckets =
 # Store direct urls for images, rather than buckets
 # For the bucket mybucket with the image helloworld.jpg the stored url would be:
-#   true:  http://s3.amazonaws.com/mybucket/helloworld.jpg
+#   true:  http://{s3_media_domain}/mybucket/helloworld.jpg
 #   false: http://mybucket/helloworld.jpg
 s3_media_direct = true
+# Which S3 region to use
+# If using the US region, the default is correct. Otherwise, use a region-specific
+# endpoint as in http://docs.aws.amazon.com/AmazonS3/latest/dev/VirtualHosting.html
+s3_media_domain = s3.amazonaws.com
 
 # filesystem provider configuration
 media_fs_root =
