Add support for forced HTTPS with HSTS grants
Right now we only give HSTS grants when the user is on g.domain
so we can easily revoke the grant. We also track changes to the
forced HTTPS pref accross sessions and modify the user's session
cookies as needed.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -397,6 +397,11 @@ ADMIN_COOKIE_MAX_IDLE = 900
 OTP_COOKIE_TTL = 604800
 
 
+############################################ SSL
+# max-age for Strict Transport Security, settings this to 0 disables
+# HSTS and revokes any previous HSTS grants.
+hsts_max_age = 10886400
+
 ############################################ CASSANDRA
 # cassandra hosts
 cassandra_seeds = 127.0.0.1:9160
