Small feature: auto-restrict subreddit searches (flagged)

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -661,3 +661,5 @@ pennies_per_server_second = 1970/1/1:1
 cflag_min_votes = 7
 cflag_lower_bound = 0.4
 cflag_upper_bound = 0.6
+
+feature_search_auto_restrict_sr = off
