Improvements to opengraph meta tags

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -366,6 +366,8 @@ static_path = /static/
 words_file = /usr/dict/words
 # domains that we consider URLs case sensitive for repost detection purposes
 case_sensitive_domains = i.imgur.com, youtube.com
+# Domains that we know are friendly and host raw image files
+known_image_domains = i.imgur.com, giant.gfycat.com, pbs.twimg.com, upload.wikimedia.org
 # whether to load reddit private code (a hack until we structure it better)
 import_private = false
 # location of geoip service
