--- a/r2/example.ini
+++ b/r2/example.ini
@@ -545,6 +545,7 @@ MAX_CAMPAIGNS_PER_LINK = 100
 cpm_selfserve = 1.00
 cpm_selfserve_geotarget_country = 1.25
 cpm_selfserve_geotarget_metro = 2.00
+cpm_selfserve_collection = 0.75
 authorizenetapi =
 # authorizenetapi = https://api.authorize.net/xml/v1/request.api
 default_promote_bid = 50
