Add flooring when displaying user karma totals
A floor of 1 total link karma already existed, this adds a floor to
comment karma as well. It also starts applying them everywhere,
including in the subreddit-specific karma breakdown.

In addition, admins are now exempt from the flooring and can see the
actual karma totals for users in all locations.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -45,6 +45,9 @@ short_description = open source is awesome
 site_lang = en
 # default header image url
 default_header_url = reddit.com.header.png
+# minimum user karma total values to show to non-admins
+link_karma_display_floor = 1
+comment_karma_display_floor = -100
 
 #### Domains
 # the domain that this app expects to be accessed on
