Configure babel to extract strings properly from Underscore templates.

--- a/r2/babel.cfg
+++ b/r2/babel.cfg
@@ -20,6 +20,9 @@
 # Inc. All Rights Reserved.
 ###############################################################################
 
+# .html files in JS are underscore templates, not mako
+[javascript:**/public/static/js/**.html]
+
 # Extraction from Mako templates
 
 [mako:**.html]
