Allow forcing HTTPS upon employees

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -129,6 +129,7 @@ disable_ads = false
 disable_captcha = false
 disable_ratelimit = false
 disable_require_admin_otp = false
+disable_require_employee_https = false
 disable_wiki = false
 
 
