Put the 'security' tab behind a feature flag

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -672,3 +672,4 @@ cflag_lower_bound = 0.4
 cflag_upper_bound = 0.6
 
 feature_search_auto_restrict_sr = off
+feature_allow_force_https = {"employee": true}
