Add a feature flag to disable HSTS grants by default
HSTS is great, but a pain when you have HTTP-only services running
on your dev machine

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -676,3 +676,7 @@ feature_search_auto_restrict_sr = off
 feature_allow_force_https = {"employee": true}
 # Who is required to use HTTPS?
 feature_require_https = off
+# HSTS grants are disabled by default since they make it a pain for devs
+# to use local HTTP services. Beware that this will disable grant revocation
+# as well.
+feature_give_hsts_grants = off
