Replace `disable_require_employee_https` with a feature flag

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -129,7 +129,6 @@ disable_ads = false
 disable_captcha = false
 disable_ratelimit = false
 disable_require_admin_otp = false
-disable_require_employee_https = false
 disable_wiki = false
 
 
@@ -672,4 +671,8 @@ cflag_lower_bound = 0.4
 cflag_upper_bound = 0.6
 
 feature_search_auto_restrict_sr = off
+
+# Availability for the "force HTTPS" option
 feature_allow_force_https = {"employee": true}
+# Who is required to use HTTPS?
+feature_require_https = off
