Inbox_counts: corrections on deletes, spams, edits
Conflicts:

	r2/r2/controllers/listingcontroller.py

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -318,6 +318,8 @@ sr_dropdown_threshold = 15
 # Conflate visits to a comment page that happen within this many
 # seconds of each other (gold "new comments" feature)
 comment_visits_period = 600
+# Max number of mentions to extract per comment
+butler_max_mentions = 3
 # Number of days to keep recent wiki revisions for
 wiki_keep_recent_days = 7
 # Max number of bytes for wiki pages
