Gilding: track "proxy gildings" in secret column

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -665,6 +665,8 @@ listing_chooser_explore_sr =
 discovery_srs =
 # historical cost to run a reddit server
 pennies_per_server_second = 1970/1/1:1
+# lowercased names of accounts that API clients use as "proxies" for gilding
+proxy_gilding_accounts =
 
 # Controversial item determination
 # Criteria for an item to meet to be determined as controversial
