Add retina-ready thumbnails

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -217,6 +217,8 @@ media_fs_base_url_http =
 media_fs_base_url_https =
 media_domain = localhost
 
+thumbnail_size = 70, 70
+thumbnail_hidpi_scaling = 2
 
 ############################################ EMERGENCY MODES
 # emergency measures: makes the site read only
