Revert "Revert "Send 1% of RUM tracking calls to hivemind""
This reverts commit d5131233e3ea6ba3d55189ccc196f14deabdc2f5.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -70,6 +70,8 @@ payment_domain = https://pay.reddit.local/
 ad_domain = http://reddit.local
 # domain where sutro websocket server is hosted
 websocket_host = %(domain)s
+# domain to send stats to
+stats_domain =
 
 #### Accounts and Subreddits
 # the user used for "system" operations and private messages
