example.ini: Add some missing options and tweak documentation.

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -51,6 +51,9 @@ default_header_url = reddit.com.header.png
 #### Domains
 # the domain that this app expects to be accessed on
 domain = reddit.local
+# where third party media (embeds etc.) are hosted
+# this should be different from `domain` for security
+media_domain = %(domain)s
 # the short domain (like redd.it)
 shortdomain =
 # if you use www for the old-timey feel, put it here
@@ -61,6 +64,8 @@ reserved_subdomains = www, ssl
 offsite_subdomains =
 # https api endpoint (must be g.domain or a subdomain of g.domain)
 https_endpoint =
+# the domain for oauth-orized requests
+oauth_domain =
 # (secure) payment domain for self-serve ads
 payment_domain = https://pay.reddit.local/
 # base url where 300x250 ad units (sidebar) are hosted
@@ -87,14 +92,14 @@ automatic_reddits =
 lounge_reddit =
 
 #### Static Files
-# if set, these are the domains used for static files served over http and https
+# if set, this is the domain used for static files served over http and https
 # if not set, no domain will be specified and relative local URLs will be used instead
 static_domain =
 # whether or not to put subreddit stylesheets in the media system or serve dynamically
 subreddit_stylesheets_static = false
 
 #### Ops
-# if your webserver is a proxy and on a different instance on the same 10.0.0.0/8 network or host
+# if your webserver is a proxy and on a different instance on the same 10.0.0.0/8 network
 # set X-forwarded-for and set this to true
 trust_local_proxies = false
 # Location (directory) for temp files for diff3 merging
@@ -112,7 +117,7 @@ adframetracker_url = /static/pixel.png
 clicktracker_url = /static/pixel.png
 # url to request to track interaction statistics
 uitracker_url = /static/pixel.png
-# google analytics key
+# google analytics token
 googleanalytics =
 # secret used for signing information on the above tracking pixels
 tracking_secret = abcdefghijklmnopqrstuvwxyz0123456789
@@ -163,6 +168,13 @@ about_sr_images = about_images
 about_images_count = 50
 about_images_min_score = 1
 
+advertising_links_sr = advertising_links
+wiki_page_selfserve_advertisers = advertising/advertisers
+wiki_page_selfserve_content = advertising/content
+wiki_page_selfserve_blurbs = advertising/blurbs
+wiki_page_selfserve_quotes = advertising/quotes
+wiki_page_selfserve_help = advertising/help
+
 ###### liveupdate
 # the domain the activity pixel is hosted on
 liveupdate_pixel_domain = %(domain)s
@@ -180,6 +192,13 @@ log_start = true
 amqp_logging = false
 # exception reporter objects to give to ErrorMiddleware (see log.py)
 error_reporters =
+
+
+############################################ METRICS
+# where to send metrics
+statsd_addr =
+# how often to send them [0.0 - 1.0]
+statsd_sample_rate = 1.0
 
 
 ############################################ MEDIA STORAGE
@@ -212,10 +231,10 @@ s3_media_domain = s3.amazonaws.com
 media_fs_root =
 media_fs_base_url_http =
 media_fs_base_url_https =
-media_domain = localhost
 
 thumbnail_size = 70, 70
 thumbnail_hidpi_scaling = 2
+
 
 ############################################ EMERGENCY MODES
 # emergency measures: makes the site read only
@@ -258,7 +277,6 @@ max_sr_images = 50
 
 
 ############################################ RATELIMITS
-
 # If true, send 429 responses on exceeded ratelimits
 # If false, send headers only, but don't abort
 # Only applies if tracking is enabled below
@@ -295,7 +313,7 @@ MIN_UP_KARMA = 1
 link_karma_display_floor = 1
 comment_karma_display_floor = -100
 
-# age at which links/comments become "archived" and can no longer be voted on or replied to
+# age at which links/comments become "archived" and can no longer be voted on, replied to, or reported
 ARCHIVE_AGE = 180 days
 
 # minimum age of an account (in days) for the "create a subreddit" button to show
@@ -402,12 +420,15 @@ ADMIN_COOKIE_TTL = 32400
 ADMIN_COOKIE_MAX_IDLE = 900
 # the maximum life of an otp cookie
 OTP_COOKIE_TTL = 604800
+# funky app user agents exempt from the login CSRF prevention
+exempt_login_user_agents =
 
 
 ############################################ SSL
-# max-age for Strict Transport Security, settings this to 0 disables
+# max-age for Strict Transport Security, setting this to 0 disables
 # HSTS and revokes any previous HSTS grants.
 hsts_max_age = 10886400
+
 
 ############################################ CASSANDRA
 # cassandra hosts
@@ -477,6 +498,8 @@ hardcache_db = main
 
 # definitions of what each table is (probably shouldn't change in .update files)
 # things require no extra info. relation is followed by the names of the related tables
+# a !typeid=# flag allows overriding of the type id for a thing/rel to avoid the db
+# hit on app startup.
 db_table_link = thing
 db_table_account = thing
 db_table_message = thing
@@ -496,8 +519,6 @@ db_table_report_account_subreddit = relation, account, subreddit
 db_table_award = thing
 db_table_trophy = relation, account, award
 db_table_jury_account_link = relation, account, link
-db_table_ad = thing
-db_table_adsr = relation, ad, subreddit
 db_table_flair = relation, subreddit, account
 db_table_promocampaign = thing
 
@@ -530,27 +551,24 @@ db_servers_promocampaign = main
 
 
 ############################################ GOLD
+# "thanks for subscribing to reddit gold" return address
+goldthanks_email =
+
 gold_month_price = 3.99
 gold_year_price = 29.99
+
 PAYPAL_BUTTONID_ONETIME_BYMONTH   =
 PAYPAL_BUTTONID_ONETIME_BYYEAR    =
 PAYPAL_BUTTONID_AUTORENEW_BYMONTH =
 PAYPAL_BUTTONID_AUTORENEW_BYYEAR  =
 PAYPAL_BUTTONID_CREDDITS_BYMONTH  =
 PAYPAL_BUTTONID_CREDDITS_BYYEAR   =
+PAYPAL_BUTTONID_GIFTCODE_BYMONTH  =
+PAYPAL_BUTTONID_GIFTCODE_BYYEAR   =
 STRIPE_MONTHLY_GOLD_PLAN =
 STRIPE_YEARLY_GOLD_PLAN =
 COINBASE_BUTTONID_ONETIME_1MO =
-COINBASE_BUTTONID_ONETIME_2MO =
 COINBASE_BUTTONID_ONETIME_3MO =
-COINBASE_BUTTONID_ONETIME_4MO =
-COINBASE_BUTTONID_ONETIME_5MO =
-COINBASE_BUTTONID_ONETIME_6MO =
-COINBASE_BUTTONID_ONETIME_7MO =
-COINBASE_BUTTONID_ONETIME_8MO =
-COINBASE_BUTTONID_ONETIME_9MO =
-COINBASE_BUTTONID_ONETIME_10MO =
-COINBASE_BUTTONID_ONETIME_11MO =
 COINBASE_BUTTONID_ONETIME_1YR =
 COINBASE_BUTTONID_ONETIME_2YR =
 COINBASE_BUTTONID_ONETIME_3YR =
@@ -563,12 +581,12 @@ cpm_selfserve = 1.00
 cpm_selfserve_geotarget_metro = 2.00
 cpm_selfserve_collection = 0.75
 authorizenetapi =
-# authorizenetapi = https://api.authorize.net/xml/v1/request.api
 default_promote_bid = 50
 min_promote_bid = 20
 max_promote_bid = 9999
 min_promote_future = 2
 max_promote_future = 93
+adserver_click_domain =
 
 
 ############################################ TRAFFIC
@@ -603,16 +621,15 @@ use = egg:Paste#http
 host = 0.0.0.0
 port = %(http_port)s
 
-[app:main]
-use = egg:r2
-# %(here)s is the directory containing the configuration file
-cache_dir = %(here)s/data
-filter-with = gzip
-
 [filter:gzip]
 use = egg:r2#gzip
 compress_level = 6
 min_size = 800
+
+[app:main]
+use = egg:r2
+cache_dir = %(here)s/data
+filter-with = gzip
 
 [loggers]
 keys = root
@@ -638,7 +655,7 @@ format = %(message)s
 # is enabled, then this configuration will be found by the app in zookeeper. to
 # write it to zookeeper, use the writer script: scripts/write_live_config.
 [live_config]
-# privileged accounts
+# permissions! each user should have one of admin, sponsor, or employee as their permission level
 employees = reddit:admin
 # links that get their own infrastructure (comma-delimited list of id36s)
 fastlane_links =
@@ -660,6 +677,9 @@ comment_tree_version_weights = 1:1, 2:0, 3:0
 frontend_logging = true
 # daily gold revenue goal (in pennies) for progress bar thing
 gold_revenue_goal = 0
+# messages to display in the "you're new here" welcome bar
+# space-delimited list of strings with / to indicate newlines
+welcomebar_messages =
 # sample multireddits (displayed when a user has no multis)
 listing_chooser_sample_multis = /user/reddit/m/hello, /user/reddit/m/world
 # multi of subreddits to share with gold users
@@ -672,13 +692,13 @@ discovery_srs =
 pennies_per_server_second = 1970/1/1:1
 # lowercased names of accounts that API clients use as "proxies" for gilding
 proxy_gilding_accounts =
-
 # Controversial item determination
 # Criteria for an item to meet to be determined as controversial
 cflag_min_votes = 7
 cflag_lower_bound = 0.4
 cflag_upper_bound = 0.6
 
+#### Features
 # Availability for the "force HTTPS" option
 feature_allow_force_https = {"employee": true}
 # Who is required to use HTTPS?
